Carousel alignment fix.

--- a/css/common/owl-carousel.less
+++ b/css/common/owl-carousel.less
@@ -294,6 +294,10 @@
 		.owl-stage-outer {
 			margin-left  : 15px;
 			margin-right : 15px;
+
+			.owl-stage {
+				margin-left: -15px
+			}
 		}
 	}
 }
